# FindSpinGroup

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish-pypi.yml
examples/: MnO.mcif  usage.py
scripts/: audit_g0std_sg_cosets.py  build_batch_snapshot.sh  build_coplanar_222_lookup.py  compare_head_key_snapshots.py  export_batch_records_to_excel.py  export_magnetic_primitive_poscars.py  export_mcif_results_to_excel.py  export_nonmagnetic_primitive_poscars.py  fetch_batch_results.sh  print_ssg_ops_xyz_uvw.py  run_batch_mcif.slurm  run_batch_msg_consistency.py  run_batch_poscar_roundtrip.sh  run_batch_poscar_roundtrip.slurm  run_batch_scif_roundtrip.sh  run_batch_scif_roundtrip.slurm  submit_batch_mcif.sh  submit_batch_poscar_roundtrip.sh  submit_batch_scif_roundtrip.sh  submit_snapshot_batch_mcif.sh  tfsg
site_docs/: cli.md  examples.md  index.md  installation.md  scif.md  usage.md
src/findspingroup/: __init__.py  batch_mcif.py  batch_poscar_roundtrip.py  batch_scif_roundtrip.py  cli.py  find_spin_group.py  g0std_sg_cosets.py
src/findspingroup/core/: __init__.py  identify_spin_space_group.py  identify_symmetry_from_ops.py  pg_analyzer.py  properties.py  tolerances.py
src/findspingroup/data/: ARITHMETIC_CRYSTAL_CLASS.py  MSGMPG_DB.py  PG_SYMBOL.py  POINT_GROUP_MATRIX.py  SG_SYMBOL.py
src/findspingroup/examples/: 2.116_Na3Co2SbO6.mcif  Fe.mcif  V2Te2O_input.mcif  __init__.py
src/findspingroup/io/: __init__.py  cif_parser.py  poscar_parser.py  scif_generator.py
src/findspingroup/structure/: __init__.py  cell.py  group.py
src/findspingroup/utils/: __init__.py  international_symbol.py  matrix_utils.py  seitz_symbol.py  space_group_flags.py  symbolic_format.py
tests/: test_batch_generate_files.py  test_cif_parser.py  test_find_spin_group.py  test_g0std_sg_cosets.py  test_identify_contract.py  test_international_symbol.py  test_packaged_examples.py  test_pg_analyzer_cluster_sites.py  test_poscar_parser.py  test_scif_parser.py
tests/baselines/: mcif_batch_smoke_baseline.json
tests/testset/: CoNb3S6_tripleQ.mcif  structure.cif  structure_2d_1.cif
tests/testset/errorset/: structure (7).cif  yzplane.mcif
tests/testset/mcif_241130_no2186/: 0.1011_FeMn2O4.mcif  0.1012_FeMn2O4.mcif  0.1049_Co(DCOO)2(D2O)2.mcif  0.1091_La2O3Mn2Se2.mcif  0.1092_La2O3Mn2Se2.mcif  0.1093_La2O3Mn2Se2.mcif  0.1094_Eu2In.mcif  0.1095_Y0.2La0.2Pr0.2Nd0.2Tb0.2MnO3.mcif  0.1096_Y0.2La0.2Pr0.2Nd0.2Tb0.2MnO3.mcif  0.1097_NdGa.mcif  0.1098_NdGa.mcif  0.1099_NdGaD0.9.mcif  0.1100_Sr2VCrAsO3.mcif  0.1101_Sr2VCrAsO3.mcif  0.1102_La4Co3O9.mcif  0.1103_EuSc2Te4.mcif  0.1104_GdCrO3.mcif  0.1105_GdCrO3.mcif  0.1106_CaCo2TeO6.mcif  0.1107_NdNi4Si.mcif  0.1108_LaTbMnCoO6.mcif  0.1109_Er2MnCoO6.mcif  0.1110_Tb2MnCoO6.mcif  0.1111_MnSb2O4.mcif  0.1112_CoNb4Se8.mcif  0.1113_Cr1.22Te2.mcif  0.1114_CeAlSi.mcif  0.1115_Ba2CrReO6.mcif  0.1116_Ba2CrReO6.mcif  0.1117_Ba3Cr2ReO9.mcif  0.1118_Ba3Cr2ReO9.mcif  0.1119_Mn5SiC.mcif  0.111_Co4Nb2O9.mcif  0.1120_KTb3F10.mcif  (+82 more)
(+39 files in other folders)
